# distrorun

./: .gitignore  Makefile.am  README.md  configure.ac  distrorun.cpp  sample.conf
distrorun.d/: somedistro.conf.example
